syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PasswordService {
   rpc hash(HashRequest) returns (HashResponse);
   rpc validate(ValidateRequest) returns (google.protobuf.BoolValue);
}

message HashRequest {
   int32 userID = 1;
   string password = 2;
}

message HashResponse {
    int32 userID = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}

message ValidateRequest {
    bytes hashedPassword = 1;
    string password = 2;
    bytes salt = 3;
}
